fix spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ body {
 .left-column {
     text-align: left;
     background-color: #1c1f24;
+    position: relative;
 }
 
 pre {
